fix image links

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -26,7 +26,7 @@
 </mat-grid-list>
 
 <!-- (click) passes input value to add() and then clears the input -->
-<!--<button (click)="add(heroName.value); heroName.value=''">
+<!--<button (click)="add(movieName.value); movieName.value=''">
   add
 </button>-->
 <!--<app-movie-detail [movie]="selectedMovie"></app-movie-detail>-->
