--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,3 +33,9 @@ nav a.active {
      Every toolbar row uses a flexbox row layout. */
   flex: 1 1 auto;
 }
+
+#toolbar {
+    position: absolute;
+    background-color:transparent;
+    background-image:'./assets/background.png';
+}
