--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <a routerLink="/movies">Movies</a>
 </nav>-->
 <div>
-  <mat-toolbar color="primary">
+  <mat-toolbar class="transparent" >
   <mat-toolbar-row>
     <span>{{title}}</span>
     <span class="example-fill-remaining-space"></span>
@@ -19,4 +19,3 @@
   <router-outlet></router-outlet>
 </div>
 <!--<app-messages></app-messages>-->
-
