--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <h3>Top Movies</h3>
+<app-movie-search ></app-movie-search>
 <div class="grid grid-pad">
   <a *ngFor="let movie of movies" class="col-1-4"
     routerLink="/detail/{{movie.id}}">
